# plant-medicator-project

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt
app/: __init__.py  hybrid_recommender.py  rag_chain.py  server.py
app/ml/: __init__.py  recommender_model.py
app/ml/utils/: data_processing.py
arag-data-loader/: rag_load_and_process.py  run_script.bat
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: plant-recommendation-components.tsx
frontend/src/components/admin/: AdminDashboard.tsx  RoleVerifier.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/types/: auth.types.ts
