[tool.poetry]
name = "plant-medicator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
tqdm = "^4.66.5"
unstructured = {extras = ["all-docs"], version = "^0.16.2"}
python-dotenv = "^1.0.1"
tiktoken = "^0.8.0"
psycopg = "^3.2.3"
pgvector = "^0.3.5"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
